# c-project-template

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: csv.h  module.h
src/: csv.c  module.c
tests/: main.c
